--- a/ACUHelpdesk/ClientApp/package.json
+++ b/ACUHelpdesk/ClientApp/package.json
@@ -10,7 +10,9 @@
     "i18next-http-backend": "^1.1.0",
     "joi": "^17.4.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "merge": "^1.2.1",
+    "node-sass": "4.14.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-bootstrap": "^1.4.3",
