--- a/ACUHelpdesk/ClientApp/package.json
+++ b/ACUHelpdesk/ClientApp/package.json
@@ -15,13 +15,15 @@
     "node-sass": "4.14.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
-    "react-bootstrap": "^1.4.3",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^16.0.0",
+    "react-dropdown-tree-select": "^2.5.1",
     "react-i18next": "^11.8.6",
     "react-icons": "^4.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
+    "react-tag-input": "^6.5.2",
     "react-toastify": "^7.0.3",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
