--- a/ACUHelpdesk/ClientApp/package.json
+++ b/ACUHelpdesk/ClientApp/package.json
@@ -17,7 +17,7 @@
     "react": "^16.0.0",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^16.0.0",
-    "react-dropdown-tree-select": "^2.5.1",
+    "react-dropdown-tree-select": "2.0.2",
     "react-i18next": "^11.8.6",
     "react-icons": "^4.2.0",
     "react-router-bootstrap": "^0.25.0",
