--- a/ACUHelpdesk/appsettings.json
+++ b/ACUHelpdesk/appsettings.json
@@ -8,7 +8,6 @@
     "SmtpUser": "helpdeskacu@gmail.com",
     "SmtpPass": "helpdesk@acu21"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -18,6 +17,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ACUConn": "Server=(local)\\SQLEXPRESS;Initial Catalog=ACUHelpdesk;User ID=aacc;Password=aacc;Persist Security Info=False;"
+    "ACUConn": "Server=tcp:acuhelpdesk.database.windows.net,1433;Initial Catalog=ACUHelpdesk;Persist Security Info=False;User ID=layale;Password=helpdesk@acu21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "Azure": {
+    "SignalR": {
+      "Enabled": "true"
+    }
   }
 }
