--- a/ACUHelpdesk/ClientApp/.env.development
+++ b/ACUHelpdesk/ClientApp/.env.development
@@ -1,3 +1,7 @@
-REACT_APP_API_URL=https://localhost:5001/api
+REACT_APP_API_URL=https://acuhelpdesk20210306172102.azurewebsites.net/api
+REACT_APP_HUB_URL=https://acuhelpdesk20210306172102.azurewebsites.net/hubs
 
 //https://localhost:44376/api
+
+//REACT_APP_API_URL=https://localhost:5001/api
+//REACT_APP_HUB_URL=https://localhost:5001/hubs
