--- a/ACUHelpdesk/ClientApp/.env.production
+++ b/ACUHelpdesk/ClientApp/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://localhost:5001/api
+REACT_APP_API_URL=https://acuhelpdesk20210306172102.azurewebsites.net/api
+REACT_APP_HUB_URL=https://acuhelpdesk20210306172102.azurewebsites.net/hubs
