--- a/ACUHelpdesk/ClientApp/.env.development
+++ b/ACUHelpdesk/ClientApp/.env.development
@@ -1,4 +1,5 @@
 REACT_APP_API_URL=https://localhost:44376/api
+REACT_APP_HUB_URL=https://localhost:44376/hubs
 
 
 //REACT_APP_API_URL=https://acuhelpdesk.azurewebsites.net/api
