--- a/ACUHelpdesk/appsettings.json
+++ b/ACUHelpdesk/appsettings.json
@@ -17,7 +17,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ACUConn": "Server=tcp:acuhelpdesk.database.windows.net,1433;Initial Catalog=ACUHelpdesk;Persist Security Info=False;User ID=layale;Password=helpdesk@acu21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ACUConn": "Server=tcp:acuhelpdesk.database.windows.net,1433;Initial Catalog=ACUHelpdesk;Persist Security Info=False;User ID=layale;Password=helpdesk@acu21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    //"ACUConn": "Server=(local)\\SQLEXPRESS;Initial Catalog=ACUHelpdesk;Persist Security Info=False;User ID=aacc;Password=aacc;",
   },
   "Azure": {
     "SignalR": {
