--- a/ACUHelpdesk/appsettings.json
+++ b/ACUHelpdesk/appsettings.json
@@ -3,10 +3,10 @@
     "JWTSecret": "ACUHelpdeskSECRETStrongKey",
     "JWTLifeSpan": 2592000,
     "EmailFrom": "helpdeskacu@gmail.com",
-    "SmtpHost": "smtp.gmail.com",
+    "SmtpHost": "in-v3.mailjet.com", //"smtp.gmail.com",
     "SmtpPort": 587,
-    "SmtpUser": "helpdeskacu@gmail.com",
-    "SmtpPass": "helpdesk@acu21"
+    "SmtpUser": "6006945a638f9cd57ea7b0b70b531440", //"helpdeskacu@gmail.com",
+    "SmtpPass": "5fb34e58d8f9bb0f364cd94c2ff7927c" //"helpdesk@acu21"
   },
   "Logging": {
     "LogLevel": {
@@ -17,8 +17,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ACUConn": "Server=tcp:acuhelpdesk.database.windows.net,1433;Initial Catalog=ACUHelpdesk;Persist Security Info=False;User ID=layale;Password=helpdesk@acu21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    //"ACUConn": "Server=(local)\\SQLEXPRESS;Initial Catalog=ACUHelpdesk;Persist Security Info=False;User ID=aacc;Password=aacc;",
+    //"ACUConn": "Server=tcp:acuhelpdesk.database.windows.net,1433;Initial Catalog=ACUHelpdesk;Persist Security Info=False;User ID=layale;Password=helpdesk@acu21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "ACUConn": "Server=(local)\\SQLEXPRESS;Initial Catalog=ACUHelpdesk;Persist Security Info=False;User ID=aacc;Password=aacc;",
   },
   "Azure": {
     "SignalR": {
